--- a/css/styles.css
+++ b/css/styles.css
@@ -329,12 +329,7 @@ section {
     align-items: center;
     gap: 30px;
 }
-.clients-list-items {
-    
-    border: 1px solid var(--icon-color);
-    border-radius: 4px;
-    fill: var(--icon-color);
-}
+
 .clients-icon {
     fill: currentColor;
 }
@@ -345,7 +340,9 @@ section {
     width: 170px;
     height: 92px;;
     color: var(--icon-color);
-   
+    border: 1px solid var(--icon-color);
+    border-radius: 4px;
+   ;
 }
 .clients-link:hover .clients-icon,
 .clients-link:focus .clients-icon {
